--- a/application/views/templates/header.html
+++ b/application/views/templates/header.html
@@ -153,7 +153,7 @@ footer{background:#20222b;}.navbar-default{background-color:#fff;}
 
 .even .testimonial-inner .testimonial-header{color:#fff;}
 .bx-wrapper .bx-caption span{background:#fff; color:#000}
-.even{background-image:url({{$base_url}}/assets/images/page3.jpg);}
+.even{background: url({{$base_url}}/assets/images/page3.jpg);}
 .even:before{background:rgba(0, 0,0, 0);}
 
 .odd h2.section-heading{color:#333;}
@@ -177,7 +177,7 @@ footer{background:#20222b;}.navbar-default{background-color:#fff;}
 
 .contactUs .section-heading{color:#fff;}
 .contactUs h3.section-subheading.contact{color:#fff;}
-.contactUs{background-image:url({{$base_url}}/assets/images/Contact-Us.jpeg);}
+.contactUs{background: url({{$base_url}}/assets/images/Page7.jpg);}
 .contactUs:before{background:rgba(0,0,0,0);}
 .contactUs label{color:#fff;}
 #section8 h2.section-heading{color:#333;}
