--- a/application/views/templates/header.html
+++ b/application/views/templates/header.html
@@ -153,7 +153,7 @@ footer{background:#20222b;}.navbar-default{background-color:#fff;}
 
 .even .testimonial-inner .testimonial-header{color:#fff;}
 .bx-wrapper .bx-caption span{background:#fff; color:#000}
-.even{background: url({{$base_url}}/assets/images/page3.jpg);}
+.even{background: url({{$base_url}}/assets/images/Page3.jpg);}
 .even:before{background:rgba(0, 0,0, 0);}
 
 .odd h2.section-heading{color:#333;}
