--- a/application/views/templates/header.html
+++ b/application/views/templates/header.html
@@ -200,7 +200,7 @@ mark{
 }
 .home_blog_content .post .post_comment {
     margin: 16px 0 16px 16px;
-    min-height: 135px;
+    /*min-height: 135px;*/
     text-align: justify;
 }
 .home_blog_content .post .post_meta {
