link text added

--- a/application/views/templates/admin/reviews.html
+++ b/application/views/templates/admin/reviews.html
@@ -25,6 +25,10 @@
                           <input type="text" class="form-control" name="order_no" value="{{$review['order_no']}}">
                         </div>
                         <div class="form-group">
+                          <label for="text">Link:</label>
+                          <input type="text" class="form-control" name="link_text" value="{{$review['link']}}">
+                        </div>
+                        <div class="form-group">
                           <label for="pwd">Comment:</label>
                           <textarea class="form-control" name="content">{{$review['content']}}</textarea>
                         </div>
