--- a/application/views/templates/header.html
+++ b/application/views/templates/header.html
@@ -274,7 +274,10 @@ h1, .h1, h2, .h2, h3, .h3 {
 <link rel="icon" href="{{$base_url}}/assets/images/cropped-arrows-box-business-533189-e1533635567575-1-192x192.jpg" sizes="192x192" />
 <link rel="apple-touch-icon-precomposed" href="{{$base_url}}/assets/images/cropped-arrows-box-business-533189-e1533635567575-1-180x180.jpg" />
 <meta name="msapplication-TileImage" content="{{$base_url}}/assets/images/cropped-arrows-box-business-533189-e1533635567575-1-270x270.jpg" />
-		</head>
+        </head>
+        <title>
+            The CRM Expert
+        </title>
 <body id="page-top" class="home page-template page-template-template-frontpage page-template-template-frontpage-php page page-id-171 index">
 <div class="overlayloader">
 <div class="loader">&nbsp;</div>
