--- a/application/views/templates/frontend/reviews.html
+++ b/application/views/templates/frontend/reviews.html
@@ -20,10 +20,10 @@
                             <div class="post_thumbnil">
                             </div>
                             <div class="post_content">
-                                <h1 class="post_title"><a href="#" rel="bookmark" title="">{{$row['content']}}</a> </h1>
+                                <h1 class="post_title"><a href="{{$row['link']}}" rel="bookmark" title="">{{$row['content']}}</a> </h1>
                                 <p class="post_comment">{{$row['comment']}}</p>
                                 <ul class="post_meta">
-                                    <li class="posted_by"><span>by </span><a href="javascript:void(0);" title="Posts by {{$row['author']}}" rel="author">{{$row['author']}}</a></li>
+                                    <li class="posted_by"><span>by </span><a href="{{$row['link']}}" title="Posts by {{$row['author']}}" rel="author">{{$row['author']}}</a></li>
                                     <li class="posted_on"><span></span>{{$row['date']}}</li>
                                 </ul>
                             </div>
