--- a/application/views/templates/footer.html
+++ b/application/views/templates/footer.html
@@ -2,10 +2,10 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <a href="#" style="margin-left:5px;"><i class="fas fa-at fa-2x"></i></a>
-                <a href="#" style="margin-left:15px;"><i class="fab fa-facebook fa-2x"></i></a>
-                <a href="#" style="margin-left:15px;"><i class="fab fa-linkedin fa-2x"></i></a>
-                <a href="#" style="margin-left:15px;"><i class="fab fa-twitter fa-2x"></i></a>
+                <a href="mailto:s.maya.blr@gmail.com" style="margin-left:5px;"><i class="fas fa-at fa-2x"></i></a>
+                <a href="https://www.facebook.com/maya.thecrm.expert" target="_blank" style="margin-left:15px;"><i class="fab fa-facebook fa-2x"></i></a>
+                <a href="https://www.linkedin.com/in/anjali-maya-crm-podio/" target="_blank" style="margin-left:15px;"><i class="fab fa-linkedin fa-2x"></i></a>
+                <a href="#" target="_blank" style="margin-left:15px;"><i class="fab fa-twitter fa-2x"></i></a>
               
             </div>
             <div class="col-md-6 right">
