--- a/application/views/templates/header.html
+++ b/application/views/templates/header.html
@@ -33,8 +33,20 @@ img.wp-smiley, img.emoji {
 <link rel="apple-touch-icon-precomposed" href="{{$base_url}}/assets/images/cropped-arrows-box-business-533189-e1533635567575-1-180x180.jpg" />
 <meta name="msapplication-TileImage" content="{{$base_url}}/assets/images/cropped-arrows-box-business-533189-e1533635567575-1-270x270.jpg" />
 
-<script type='text/javascript' src='{{$base_url}}/assets/js/jquery.js'></script>
-<script type='text/javascript' src='{{$base_url}}/assets/js/jquery-migrate.min.js'></script>
+<script async type='text/javascript' src='{{$base_url}}/assets/js/jquery.js'></script>
+<script async type='text/javascript' src='{{$base_url}}/assets/js/jquery-migrate.min.js'></script>
+<!--
+    GOOGLE ANALYTICS CODE
+    !-->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-158375461-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-158375461-1');
+</script>
 
 </head>
         <title>
