--- a/application/views/templates/header.html
+++ b/application/views/templates/header.html
@@ -33,8 +33,8 @@ img.wp-smiley, img.emoji {
 <link rel="apple-touch-icon-precomposed" href="{{$base_url}}/assets/images/cropped-arrows-box-business-533189-e1533635567575-1-180x180.jpg" />
 <meta name="msapplication-TileImage" content="{{$base_url}}/assets/images/cropped-arrows-box-business-533189-e1533635567575-1-270x270.jpg" />
 
-<script async type='text/javascript' src='{{$base_url}}/assets/js/jquery.js'></script>
-<script async type='text/javascript' src='{{$base_url}}/assets/js/jquery-migrate.min.js'></script>
+<script type='text/javascript' src='{{$base_url}}/assets/js/jquery.js'></script>
+<script type='text/javascript' src='{{$base_url}}/assets/js/jquery-migrate.min.js'></script>
 <!--
     GOOGLE ANALYTICS CODE
     !-->
