added YouTube link

--- a/application/views/templates/footer.html
+++ b/application/views/templates/footer.html
@@ -6,7 +6,7 @@
                 <a href="https://www.facebook.com/maya.thecrm.expert" target="_blank" style="margin-left:15px;"><i class="fab fa-facebook fa-2x"></i></a>
                 <a href="https://www.linkedin.com/in/anjali-maya-crm-podio/" target="_blank" style="margin-left:15px;"><i class="fab fa-linkedin fa-2x"></i></a>
                 <a href="#" target="_blank" style="margin-left:15px;"><i class="fab fa-twitter fa-2x"></i></a>
-              
+                <a href="https://www.youtube.com/channel/UChm_3kJ0XRJt7A76s_v_04g" target="_blank" style="margin-left:15px;"><i class="fab fa-youtube"></i></a>
             </div>
             <div class="col-md-6 right">
             <span style="float:right;">&copy; {{'Y'|date}} The CRM Expert, All rights reserved.</span>
